--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
         </div>
         <main class="right-side">
             <p class="about-me content-section" id="sobre">
-                Este é o meu portfólio e atualmete em busca de uma oportunidade de estágio. Meu principal objetivo é iniciar minha carreira na área de T.I. Possuo conhecimentos sólidos em diferentes tecnologias, além também de matemática e eletrônica, adquiridos durante minha graduação. <br><br>
+                Olá, este é o meu portfólio e atualmete estou em busca de uma oportunidade de estágio. Meu principal objetivo é iniciar minha carreira na área de T.I. Possuo conhecimentos em diferentes tecnologias, além de uma báse sólida em matemática e eletrônica, adquiridos durante minha graduação. <br><br>
 
-                Estou em busca de uma oportunidade em uma empresa que me permita crescer e, principalmente, aprender. Atualmente, não tenho uma área específica de interesse, estou aberto a aprender pelo que estiver em meu futuro seja ela web, embarcados, dados, IA ou segurança. Basta um ambiente de trabalho cooperativo e propenso a evolução <br><br>
+                Estou em busca de uma oportunidade em uma empresa que me permita crescer e, principalmente, aprender. Atualmente, não tenho uma área específica de interesse, estou aberto a aprender sobre diversos campos seja ela web, sistemas embarcados, dados, inteligência artificial ou segurança. 
+                O essencial para mim é encontrar um ambiente de trabalho cooperativo e propenso à evolução. <br><br>
 
-                É importante mencionar que preciso trabalhar de forma remota e ter horários flexíveis pois estudo em horário vespertino. Estou confiante de que posso contribuir de maneira positiva e estou ansioso para explorar novas oportunidades no mundo profissional.
+                É importante mencionar que preciso trabalhar de forma remota e ter horários flexíveis por conta dos meus estudos. Estou confiante de que posso contribuir de maneira positiva e estou ansioso para explorar novas oportunidades no mundo profissional.
             </p>
 
             <h3>Experiência profissional</h3>
