--- a/index.html
+++ b/index.html
@@ -26,17 +26,15 @@
         </div>
         <main class="right-side">
             <p class="about-me content-section" id="sobre">
-                Olá, este é o meu portfólio e atualmete estou em busca de uma oportunidade de estágio. Meu principal objetivo é iniciar minha carreira na área de T.I. Possuo conhecimentos em diferentes tecnologias, além de uma báse sólida em matemática e eletrônica, adquiridos durante minha graduação. <br><br>
-
-                Estou em busca de uma oportunidade em uma empresa que me permita crescer e, principalmente, aprender. Atualmente, não tenho uma área específica de interesse, estou aberto a aprender sobre diversos campos seja ela web, sistemas embarcados, dados, inteligência artificial ou segurança. 
-                O essencial para mim é encontrar um ambiente de trabalho cooperativo e propenso à evolução. <br><br>
-
-                É importante mencionar que preciso trabalhar de forma remota e ter horários flexíveis por conta dos meus estudos. Estou confiante de que posso contribuir de maneira positiva e estou ansioso para explorar novas oportunidades no mundo profissional.
+                Olá, bem-vindo ao meu portifólio!
             </p>
 
             <h3>Experiência profissional</h3>
 
-            <p>Me ajude a preencher essa sessão!</p>
+            <h5 class="job-title">Estagiário de Desenvolvimento de Sistemas</h5>
+            <p class="company-name">Clube FII Tecnologia e Consultoria <br/>
+                <span class="date-range">Fev de 2024 - o momento</span>
+            </p>
 
             <h3 class="content-section" id="projetos">Projetos pessoais e acadêmicos:</h3>
 
@@ -48,7 +46,7 @@
                     O sistema da academina "Tá pago" é um sistema fictício e com uma proposta divertida, em uma academia que o sistema de pagamento está diretamente relacionado ao quanto peso você levanta. Subsequência direta do sistema de academia anterior e que dessa vez está sendo desenvolvido para a disciplina de Banco de Dados I. Utiliza o padrão de linguagens para desenvolvimento Web como <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Além do uso de <strong>Node.JS</strong> para o backend, e para o banco de dados é utilizado <strong>SQL</strong> com as consultas em sua linguagem padrão.
                 </p>
                 <p>
-                    Ainda está em desenvolvimento, futuramente o projeto será apresentado com mais detalhes no <a href="https://github.com/iamdiegosanches" target="_blank" rel="noopener noreferrer">GitHub</a>.
+                    Veja o projeto no <a href="https://github.com/iamdiegosanches" target="_blank" rel="noopener noreferrer">GitHub</a>.
                 </p>
             </div>
             <button class="collapsible">Sistema de academia - Node.Js</button>
@@ -81,7 +79,7 @@
             
             <h3 id="formacao">Formação Acadêmica e Certificações</h3>
             <p>
-                Encontro-me atualmente no <strong>sexto</strong> período do curso de Engenharia de Computação na Universidade Federal de Ouro Preto. Possuo certificações pela FreeCodeCamp nas áreas de <a href="https://www.freecodecamp.org/certification/fccb52dfaca-c848-487c-9cba-68132581bea0/responsive-web-design" target="_blank" rel="noopener noreferrer">Responsive Web Design</a> e <a href="https://www.freecodecamp.org/certification/fccb52dfaca-c848-487c-9cba-68132581bea0/back-end-development-and-apis" target="_blank" rel="noopener noreferrer">Back End Development and APIs</a>. Além disso, obtive a certificação em Google Cloud Platform diretamente pela Google no curso <a href="https://www.cloudskillsboost.google/public_profiles/be74f55b-c64c-406e-9ffc-12c312ba6268" target="_blank" rel="noopener noreferrer">Google Cloud Computing Foundations</a>. Na Cisco SkillBoost, conquistei a certificação em Cybersegurança, conforme pode ser verificado em minha credencial: <a href="https://www.credly.com/badges/37558ee7-1667-4dc4-b5b6-fdba7bdfa5dc/linked_in_profile" target="_blank">Introduction to Cybersecurity</a>.
+                Encontro-me atualmente no <strong>sétimo</strong> período do curso de Engenharia de Computação na Universidade Federal de Ouro Preto. Possuo certificações pela FreeCodeCamp nas áreas de <a href="https://www.freecodecamp.org/certification/fccb52dfaca-c848-487c-9cba-68132581bea0/responsive-web-design" target="_blank" rel="noopener noreferrer">Responsive Web Design</a> e <a href="https://www.freecodecamp.org/certification/fccb52dfaca-c848-487c-9cba-68132581bea0/back-end-development-and-apis" target="_blank" rel="noopener noreferrer">Back End Development and APIs</a>. Além disso, obtive a certificação em Google Cloud Platform diretamente pela Google no curso <a href="https://www.cloudskillsboost.google/public_profiles/be74f55b-c64c-406e-9ffc-12c312ba6268" target="_blank" rel="noopener noreferrer">Google Cloud Computing Foundations</a>. Na Cisco SkillBoost, conquistei a certificação em Cybersegurança, conforme pode ser verificado em minha credencial: <a href="https://www.credly.com/badges/37558ee7-1667-4dc4-b5b6-fdba7bdfa5dc/linked_in_profile" target="_blank">Introduction to Cybersecurity</a>.
             </p>
         </main>
     </div>
