--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>Diego Sanches</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu:400,700">
-    <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/mrrobot">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
     <div class="container">
         <div class="left-side">
-            <h1>Diego Sanches</h1>
+            <h1 class="text-6xl bg">Diego Sanches</h1>
             <h2>Aspirante em Tecnologia</h2>
             <p class="title"><strong>Engenheiro da Computação</strong> em formação na UFOP - Universidade Federal de Ouro Preto.</p>
             <ul class="social-links">
@@ -43,10 +43,10 @@
             <button class="collapsible">Academia "Tá pago"</button>
             <div class="content">
                 <p>
-                    O sistema da academina "Tá pago" é um sistema fictício e com uma proposta divertida, em uma academia que o sistema de pagamento está diretamente relacionado ao quanto peso você levanta. Subsequência direta do sistema de academia anterior e que dessa vez está sendo desenvolvido para a disciplina de Banco de Dados I. Utiliza o padrão de linguagens para desenvolvimento Web como <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Além do uso de <strong>Node.JS</strong> para o backend, e para o banco de dados é utilizado <strong>SQL</strong> com as consultas em sua linguagem padrão.
+                    O sistema da academina "Tá pago" é um sistema fictício e com uma proposta diferente, em uma academia que a forma de pagamento está diretamente relacionado a quanto exercício. Foi desenvolvido para a disciplina de Banco de Dados I. Utiliza o padrão de linguagens para desenvolvimento Web como <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Além do uso de <strong>Node.JS</strong> para o backend, e para o banco de dados é utilizado <strong>SQL</strong> com as consultas em sua linguagem padrão.
                 </p>
                 <p>
-                    Veja o projeto no <a href="https://github.com/iamdiegosanches" target="_blank" rel="noopener noreferrer">GitHub</a>.
+                    Veja o projeto em <a href="https://github.com/iamdiegosanches" target="_blank" rel="noopener noreferrer">GitHub</a>.
                 </p>
             </div>
             <button class="collapsible">Sistema de academia - Node.Js</button>
@@ -63,10 +63,7 @@
             <div class="content">
                 <p>
                     O projeto de uma fonte ajustável de 12V implica na construção de circuito sobre placa impressa que abrigará uma fonte com saída ajustável, incorporando um circuito de proteção para a disciplina de Eletrônica. A proposta inclui a indicação da tensão de saída e possivelmente múltiplas entradas para dispositivos. O projeto poderá envolver também o uso de arduinos e dentre outros. Embora esteja em estágio inicial, vale ressaltar experiências relevantes para a área de sistemas embarcados, como a utilização de linguagens de programação como <strong>C, Python e Octave</strong>, além do emprego de softwares como <strong>PSIM</strong> e <strong>Proteus</strong>.
-
-                    
                 </p>
-                <p><em>[Uma galeria de imagens do projeto será colocada aqui.]</em></p>
             </div>
             <button class="collapsible">90 websites - O começo</button>
             <div class="content">
