--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
             <ul class="social-links">
                 <li><a href="https://www.linkedin.com/in/iamdiegosanches/" target="_blank" class="fa fa-linkedin"></a></li>
                 <li><a href="https://github.com/iamdiegosanches" target="_blank" class="fa fa-github"></a></li>
-                <!--<li><a href="mailto:dgsanches3@gmail.com?&subject=Job Proposal for Diego&body=Write a job proposal here ...." target="_blank" class="fa fa-envelope"></a></li> -->
-
             </ul>
         </div>
         <main class="right-side">
@@ -43,32 +41,32 @@
             <button class="collapsible">Academia "Tá pago"</button>
             <div class="content">
                 <p>
-                    O sistema da academina "Tá pago" é um sistema fictício e com uma proposta diferente, em uma academia que a forma de pagamento está diretamente relacionado a quanto exercício. Foi desenvolvido para a disciplina de Banco de Dados I. Utiliza o padrão de linguagens para desenvolvimento Web como <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>. Além do uso de <strong>Node.JS</strong> para o backend, e para o banco de dados é utilizado <strong>SQL</strong> com as consultas em sua linguagem padrão.
+                    Projeto realizado como parte da disciplina de Banco de Dados. O sistema da academina "Tá pago" é um sistema fictício e com uma proposta diferente, uma academia que a forma de pagamento está diretamente relacionado a quanto exercício você consegue fazer. Foi desenvolvido para a disciplina de Banco de Dados I. Utiliza como tecnologia para desenvolvimento Web <strong>HTML</strong>, <strong>CSS</strong>, <strong>JavaScript</strong> e <strong>Node.JS</strong> para o backend. E para o banco de dados é utilizado <strong>SQL</strong> com as consultas em sua linguagem padrão.
                 </p>
                 <p>
-                    Veja o projeto em <a href="https://github.com/iamdiegosanches" target="_blank" rel="noopener noreferrer">GitHub</a>.
+                    <a href="https://github.com/iamdiegosanches" target="_blank" rel="noopener noreferrer">Repositório</p>a>.
                 </p>
             </div>
             <button class="collapsible">Sistema de academia - Node.Js</button>
             <div class="content">
                 <p>
-                    Projeto realizado como parte do curso de Engenharia de Software, envolvendo um grupo composto por quatro membros. A equipe assumiu a responsabilidade de conceber a ideia por trás do sistema, elaborar um documento de requisitos e criar diagramas de casos de uso, diagramas de classe, de atividade e outros componentes relevantes. Para a implementação, utilizamos uma combinação de tecnologias, incluindo <strong>HTML, CSS, JavaScript, Node.js</strong>  com o framework <strong>Express</strong> e o banco de dados <strong>MongoDB</strong>.
+                    Projeto realizado como parte da disciplina de Engenharia de Software, envolvendo um grupo composto por quatro membros. A equipe assumiu a responsabilidade de conceber a ideia por trás do sistema, elaborar um documento de requisitos e criar diagramas de casos de uso, diagramas de classe, de atividade e outros componentes relevantes. Para a implementação, utilizamos uma combinação de tecnologias, incluindo <strong>HTML, CSS, JavaScript, Node.js</strong> com o framework <strong>Express</strong> e o banco de dados <strong>MongoDB</strong>.
                 </p>
                 <p>
-                    Para compreender o funcionamento do projeto, convido você a verificar o repositório. Na execução desse projeto, minha principal atribuição consistiu no desenvolvimento do Back-End, abrangendo a implementação de mais de quatro tipos de operações CRUD, além de incluir recursos de autenticação e permissões de usuário, juntamente com outras funcionalidades.
+                    Na execução desse projeto, minha principal atribuição consistiu no desenvolvimento do Back-End, abrangendo a implementação de mais de quatro operações de CRUD, além de incluir recursos de autenticação e permissões de usuário.
                 </p>
                 <a href="https://github.com/iamdiegosanches/academia_power_pump" target="_blank" class="Repository">Repositório</a>
             </div>
             <button class="collapsible">Fonte ajustável de 12V</button>
             <div class="content">
                 <p>
-                    O projeto de uma fonte ajustável de 12V implica na construção de circuito sobre placa impressa que abrigará uma fonte com saída ajustável, incorporando um circuito de proteção para a disciplina de Eletrônica. A proposta inclui a indicação da tensão de saída e possivelmente múltiplas entradas para dispositivos. O projeto poderá envolver também o uso de arduinos e dentre outros. Embora esteja em estágio inicial, vale ressaltar experiências relevantes para a área de sistemas embarcados, como a utilização de linguagens de programação como <strong>C, Python e Octave</strong>, além do emprego de softwares como <strong>PSIM</strong> e <strong>Proteus</strong>.
+                    O projeto de uma fonte ajustável de 12V implica na construção de circuito sobre placa impressa de uma fonte com saída ajustável, incorporando um circuito de proteção para a disciplina de Eletrônica. A proposta inclui a indicação da tensão de saída e possivelmente múltiplas entradas para dispositivos. Vale ressaltar experiências relevantes para a área de sistemas embarcados, como a utilização de linguagens de programação como o emprego de softwares como <strong>PSIM</strong> e <strong>Proteus</strong>.
                 </p>
             </div>
-            <button class="collapsible">90 websites - O começo</button>
+            <button class="collapsible">90 websites</button>
             <div class="content">
                 <p>
-                    Quando dei os primeiros passos na área de tecnologia, concentrando-me no desenvolvimento front-end com <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>, surgiu a ideia ambiciosa de criar um portifólio composto por 90 exemplos de websites, um para cada dia. Embora essa meta grandiosa não tenha sido totalmente alcançada, ainda existem diversos exemplos que podem ser explorados e apreciados. O site foi colocado ao ar pelo sistema da vercel.
+                    Quando dei os primeiros passos na área de tecnologia, concentrando-me no desenvolvimento front-end com <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong>, surgiu a ideia ambiciosa de criar um portifólio composto por 90 exemplos de websites, um para cada dia. Embora essa meta não tenha sido totalmente alcançada, ainda existem diversos exemplos que podem ser explorados e apreciados. O site foi colocado ao ar pelo sistema da vercel.
                 </p>
 
                 <a href="http://90websites.vercel.app" target="_blank">http://90websites.vercel.app</a>
@@ -76,7 +74,7 @@
             
             <h3 id="formacao">Formação Acadêmica e Certificações</h3>
             <p>
-                Encontro-me atualmente no <strong>sétimo</strong> período do curso de Engenharia de Computação na Universidade Federal de Ouro Preto. Possuo certificações pela FreeCodeCamp nas áreas de <a href="https://www.freecodecamp.org/certification/fccb52dfaca-c848-487c-9cba-68132581bea0/responsive-web-design" target="_blank" rel="noopener noreferrer">Responsive Web Design</a> e <a href="https://www.freecodecamp.org/certification/fccb52dfaca-c848-487c-9cba-68132581bea0/back-end-development-and-apis" target="_blank" rel="noopener noreferrer">Back End Development and APIs</a>. Além disso, obtive a certificação em Google Cloud Platform diretamente pela Google no curso <a href="https://www.cloudskillsboost.google/public_profiles/be74f55b-c64c-406e-9ffc-12c312ba6268" target="_blank" rel="noopener noreferrer">Google Cloud Computing Foundations</a>. Na Cisco SkillBoost, conquistei a certificação em Cybersegurança, conforme pode ser verificado em minha credencial: <a href="https://www.credly.com/badges/37558ee7-1667-4dc4-b5b6-fdba7bdfa5dc/linked_in_profile" target="_blank">Introduction to Cybersecurity</a>.
+                Encontro-me atualmente no <strong>sétimo</strong> período do curso de Engenharia de Computação na Universidade Federal de Ouro Preto. Possuo certificações pela FreeCodeCamp nas áreas de <a href="https://www.freecodecamp.org/certification/fccb52dfaca-c848-487c-9cba-68132581bea0/responsive-web-design" target="_blank" rel="noopener noreferrer">Responsive Web Design</a> e <a href="https://www.freecodecamp.org/certification/fccb52dfaca-c848-487c-9cba-68132581bea0/back-end-development-and-apis" target="_blank" rel="noopener noreferrer">Back End Development and APIs</a>. Além disso, obtive a certificação em Google Cloud Platform diretamente pela Google no curso <a href="https://www.cloudskillsboost.google/public_profiles/be74f55b-c64c-406e-9ffc-12c312ba6268" target="_blank" rel="noopener noreferrer">Google Cloud Computing Foundations</a>. Na Cisco SkillBoost, conquistei a certificação de introdução à cybersegurança, conforme pode ser verificado em minha credencial: <a href="https://www.credly.com/badges/37558ee7-1667-4dc4-b5b6-fdba7bdfa5dc/linked_in_profile" target="_blank">Introduction to Cybersecurity</a>.
             </p>
         </main>
     </div>
