fix: lista de habilidades

--- a/index.html
+++ b/index.html
@@ -85,10 +85,13 @@
                             <span class="skill-tag">CUDA</span>
                             <span class="skill-tag">C#</span>
                             <span class="skill-tag">C/C++</span>
+                            <span class="skill-tag">PHP</span>
+                            <span class="skill-tag">AI</span>
                             <span class="skill-tag">SQL</span>
+                            <span class="skill-tag">Azure Functions</span>
                             <span class="skill-tag">HTML/CSS</span>
                             <span class="skill-tag">Git</span>
-                            </div>
+                        </div>
                     </div>
                 </section>
 
