--- a/index.html
+++ b/index.html
@@ -144,7 +144,13 @@
 
             </main>
         </div>
-        
+        <div id="terminal-container">
+            <div id="terminal-history"></div>
+            <div class="input-line">
+                <span class="prompt">user@diegosanches:~$</span>
+                <input type="text" id="terminal-input" autofocus>
+            </div>
+        </div>
         <footer class="footer-glitch">
             <p>COPYRIGHT © 2026 DIEGO SANCHES. OPTIMIZED FOR NETSCAPE NAVIGATOR 4.0</p>
         </footer>
