--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </div>
 
         <div id="snake-window" class="neo-window" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 1000; width: 320px;">
-            <div class="window-bar">snake_exe.bat <span id="close-snake" style="float:right; cursor:pointer;" >[X]</span></div>
+            <div class="window-bar">snake.bat <span id="close-snake" style="float:right; cursor:pointer;" >[X]</span></div>
             <div class="window-content" style="background-color: #9bbc0f; display: flex; flex-direction: column; align-items: center; padding: 10px;">
                 <canvas id="snakeGame" width="300" height="300" style="border: 2px solid #0f380f; background-color: #8bac0f;"></canvas>
                 <div id="snake-score" style="color: #0f380f; font-family: 'VT323', monospace; margin-top: 5px;">SCORE: 000</div>
