fix: removendo autofocus

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             <div id="terminal-history"></div>
             <div class="input-line">
                 <span class="prompt">user@diegosanches:~$</span>
-                <input type="text" id="terminal-input" autofocus>
+                <input type="text" id="terminal-input">
             </div>
         </div>
 
